Need to get SJF to start p2 first